--- a/mygcs/src/main/res/drawable/btn_off.xml
+++ b/mygcs/src/main/res/drawable/btn_off.xml
@@ -3,7 +3,7 @@
     <item>
         <shape>
             <solid
-                android:color="#583e20" />
+                android:color="#6e4d43" />
             <stroke
                 android:width="1dp" />
             <corners
