--- a/mygcs/src/main/res/drawable/btn_on.xml
+++ b/mygcs/src/main/res/drawable/btn_on.xml
@@ -3,7 +3,7 @@
     <item>
         <shape>
             <solid
-                android:color="#ff7f00" />
+                android:color="#ffa159" />
             <stroke
                 android:width="1dp" />
             <corners
