--- a/mygcs/src/main/res/layout/list_device_name.xml
+++ b/mygcs/src/main/res/layout/list_device_name.xml
@@ -13,7 +13,7 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:textSize="18sp"
+    android:textSize="11dp"
     android:padding="5dp"
     android:textColor="@android:color/primary_text_light"
     android:id="@+id/bluetooth_device_info"
